opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jane-build"
bug-reports: "https://github.com/janestreet/jane-build/issues"
dev-repo: "https://github.com/janestreet/jane-build.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "jane-build" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core"
  "jbuilder"                {build}
  "jenga"
  "jenga-rules"
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Jenga with Jane Street build rules

jane-build is jenga with Jane Street build rules statically linked in.
"
