opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jane-build"
bug-reports: "https://github.com/janestreet/jane-build/issues"
dev-repo: "git+https://github.com/janestreet/jane-build.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "jane-build" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core"
  "jbuilder"                {build & >= "1.0+beta8"}
  "jenga"
  "jenga-rules"
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Jenga with Jane Street build rules

jane-build is jenga with Jane Street build rules statically linked in.
"
