opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jane-build"
bug-reports: "https://github.com/janestreet/jane-build/issues"
dev-repo: "git+https://github.com/janestreet/jane-build.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core"
  "jenga"
  "jenga-rules"
  "ppx_driver"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Jenga with Jane Street build rules

jane-build is jenga with Jane Street build rules statically linked in.
"
